parser: Add unit tests for parsing of asm grammar language level 0